# beans

./: .gitignore  AGENTS.md  CHANGELOG.md  PLAN.md  README.md  pyproject.toml  tox.ini
.beans/: .gitignore  AGENTS.md  journal.jsonl
.github/workflows/: ci.yml  release.yml
docs/: README.md  beans-ideal-help-output.md  beans-improvement-proposals.md  beans-phase-2-specs.md  beans-phase-3-specs.md
docs/plans/: user-defined-bean-types.md
src/beans/: api.py  cli.py  config.py  graph.py  models.py  project.py  store.py  workspace.py
src/beans/templates/: AGENTS.md  skill.md
src/beans/templates/recipes/: claude.md  generic.md  gpt.md
tests/: test_api.py  test_cli.py  test_config.py  test_deps.py  test_fields.py  test_graph.py  test_identifier.py  test_init.py  test_journal.py  test_labels.py  test_models.py  test_projects.py  test_recipe.py  test_registry.py  test_search.py  test_stats.py  test_store.py
